--- a/slavatracks/templates/index.html
+++ b/slavatracks/templates/index.html
@@ -15,7 +15,7 @@
       <header class="container site-banner">
         <hgroup>
           <a href="/"><h1 class="site-title">SLAVATRACKS</h1></a>
-          <p>SlavaTalent Playlist Recommendations</p>
+          <p>Playlist Recommendations</p>
         </hgroup>
       </header>
 
