--- a/slavatracks/static/css/main.css
+++ b/slavatracks/static/css/main.css
@@ -49,12 +49,13 @@ a {
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 2rem;
-    border: 1px solid #333;
+    border: 1px solid #6b6b6b;
 }
 
 .trackTitle {
-    color: #eee;
+    color: #ffffff;
     font-size: 1.4rem;
+    font-weight: bold;
 }
 
 .trackArtist {
@@ -63,7 +64,7 @@ a {
 }
 
 .trackStreamingLink, .trackPrettifiedStyles, .trackTimestamp {
-    color: #aaa;
+    color: #ebebeb;
     font-size: 1rem;
 }
 
